@@ -26,7 +26,7 @@ class CondorBaseBatchSubmitPlugin(BatchSubmitInterface):
     
     def __init__(self, apfqueue, config=None):
         if not config:
-            qcl = apfqueue.factory.qcl            
+            qcl = apfqueue.qcl            
         else:
             qcl = config
         
