@@ -11,7 +11,7 @@ class CondorCEBatchSubmitPlugin(CondorGridBatchSubmitPlugin):
    
     def __init__(self, apfqueue, config=None):
         if not config:
-            qcl = apfqueue.factory.qcl            
+            qcl = apfqueue.qcl            
         else:
             qcl = config
             
