@@ -20,7 +20,7 @@ class CondorEC2BatchSubmitPlugin(CondorGridBatchSubmitPlugin):
     
     def __init__(self, apfqueue, config=None):
         if not config:
-            qcl = apfqueue.factory.qcl            
+            qcl = apfqueue.qcl            
         else:
             qcl = config
         
